[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Main Menu/mainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/mainMenu/mainMenu.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/music/placeholderMusic/electric-dragon-legion-black.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/fonts/DJGROSS.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 55
extra_spacing_bottom = 11
font_data = ExtResource( 7 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_scale = Vector2( 0.55, 0.56 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1056.0
margin_bottom = 600.0
custom_constants/margin_right = 50
custom_constants/margin_top = 250
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu"]
margin_left = 50.0
margin_top = 250.0
margin_right = 1006.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/HBoxContainer"]
margin_right = 382.0
margin_bottom = 306.0

[node name="Label" type="Label" parent="MainMenu/HBoxContainer/VBoxContainer"]
margin_right = 382.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Wow Killer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuOptions" type="VBoxContainer" parent="MainMenu/HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 382.0
margin_bottom = 288.0
custom_constants/separation = 16
alignment = 1

[node name="NouvellePartie" type="Button" parent="MainMenu/HBoxContainer/VBoxContainer/MenuOptions"]
margin_right = 382.0
margin_bottom = 20.0
text = "Nouvelle partie"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="CheckButton" parent="MainMenu/HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 36.0
margin_right = 382.0
margin_bottom = 76.0
text = "Plein écran"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="MainMenu/HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 92.0
margin_right = 382.0
margin_bottom = 132.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Musique" type="CheckButton" parent="MainMenu/HBoxContainer/VBoxContainer/MenuOptions/HBoxContainer2"]
margin_right = 135.0
margin_bottom = 40.0
pressed = true
text = "Musique"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderVolume" type="HSlider" parent="MainMenu/HBoxContainer/VBoxContainer/MenuOptions/HBoxContainer2"]
margin_left = 139.0
margin_right = 382.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 25.0
value = 25.0
tick_count = 25
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MappingTouches" type="Button" parent="MainMenu/HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 148.0
margin_right = 382.0
margin_bottom = 168.0
text = "Redéfinir les touches"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TailleEcran" type="OptionButton" parent="MainMenu/HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 184.0
margin_right = 382.0
margin_bottom = 204.0
text = "Résolution :"

[node name="ButtonQuit" type="Button" parent="MainMenu/HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 220.0
margin_right = 382.0
margin_bottom = 240.0
text = "Quitter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="MainMenu/HBoxContainer/VBoxContainer"]
margin_top = 292.0
margin_right = 382.0
margin_bottom = 306.0
text = "Version 0.0.1"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MainMenu/HBoxContainer"]
margin_left = 386.0
margin_right = 956.0
margin_bottom = 306.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/HBoxContainer/Panel"]
margin_left = 15.0
margin_top = 15.0
margin_right = 15.0
margin_bottom = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/HBoxContainer/Panel/MarginContainer"]
margin_right = 343.0
margin_bottom = 68.0

[node name="HBoxCont_ui_shoot" type="HBoxContainer" parent="MainMenu/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 343.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTirer" type="Label" parent="MainMenu/HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxCont_ui_shoot"]
margin_top = 3.0
margin_right = 151.0
margin_bottom = 17.0
text = "Tirer (Arme principale) :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MainMenu/HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxCont_ui_shoot"]
margin_left = 155.0
margin_right = 343.0
margin_bottom = 20.0
toggle_mode = true
text = "Touche attribuée par défaut"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxCont_ui_bomb" type="HBoxContainer" parent="MainMenu/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 343.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelBomb" type="Label" parent="MainMenu/HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxCont_ui_bomb"]
margin_top = 3.0
margin_right = 136.0
margin_bottom = 17.0
text = "Utiliser une bombe : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MainMenu/HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxCont_ui_bomb"]
margin_left = 140.0
margin_right = 328.0
margin_bottom = 20.0
toggle_mode = true
text = "Touche attribuée par défaut"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxCont_ui_focus" type="HBoxContainer" parent="MainMenu/HBoxContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 343.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelFocus" type="Label" parent="MainMenu/HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxCont_ui_focus"]
margin_top = 3.0
margin_right = 111.0
margin_bottom = 17.0
text = "Activer le focus : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MainMenu/HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxCont_ui_focus"]
margin_left = 115.0
margin_right = 303.0
margin_bottom = 20.0
toggle_mode = true
text = "Touche attribuée par défaut"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="pressed" from="MainMenu/HBoxContainer/VBoxContainer/MenuOptions/NouvellePartie" to="." method="_on_NouvellePartie_pressed"]
[connection signal="pressed" from="MainMenu/HBoxContainer/VBoxContainer/MenuOptions/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="ready" from="MainMenu/HBoxContainer/VBoxContainer/MenuOptions/Fullscreen" to="." method="_on_CheckButton_ready"]
[connection signal="pressed" from="MainMenu/HBoxContainer/VBoxContainer/MenuOptions/HBoxContainer2/Musique" to="." method="_on_Musique_pressed"]
[connection signal="ready" from="MainMenu/HBoxContainer/VBoxContainer/MenuOptions/HBoxContainer2/Musique" to="." method="_on_CheckButton_ready"]
[connection signal="changed" from="MainMenu/HBoxContainer/VBoxContainer/MenuOptions/HBoxContainer2/SliderVolume" to="." method="_on_HSlider_changed"]
[connection signal="value_changed" from="MainMenu/HBoxContainer/VBoxContainer/MenuOptions/HBoxContainer2/SliderVolume" to="." method="_on_SliderVolume_value_changed"]
[connection signal="toggled" from="MainMenu/HBoxContainer/VBoxContainer/MenuOptions/MappingTouches" to="." method="_on_MappingTouches_toggled"]
[connection signal="pressed" from="MainMenu/HBoxContainer/VBoxContainer/MenuOptions/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
[connection signal="pressed" from="MainMenu/HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxCont_ui_shoot/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MainMenu/HBoxContainer/Panel/MarginContainer/VBoxContainer/HBoxCont_ui_bomb/Button" to="." method="_on_Button_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
